--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,26 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@/types/*": [
+        "./src/types/*"
       ]
-    }
+    },
+    "jsx": "react-native",
+    "types": [
+      "react",
+      "react-native",
+      "jest"
+    ]
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
