--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.10",
@@ -39,13 +40,16 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-audio-recorder-player": "^4.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-haptic-feedback": "^2.3.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.8.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "~4.11.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-tab-view": "^4.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
@@ -57,6 +61,7 @@
     "@react-native-community/cli": "^19.1.0",
     "@types/lodash": "^4.17.20",
     "@types/react": "~19.0.10",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
