--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.14.1",
+    "react-native-svg": "^15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.4.1",
     "react-redux": "^9.2.0"
@@ -53,6 +54,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^16.1.5",
     "prettier": "^2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
