--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@nozbe/watermelondb": "^0.28.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/slider": "^4.5.7",
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -25,6 +28,7 @@
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-audio-recorder-player": "^4.3.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-nitro-modules": "^0.28.1",
