删除.codebuddy和QWEN.md，并添加到.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,8 @@ yarn-error.log
 .env.development.local
 .env.test.local
 .env.production.local
+
+# CodeBuddy files
+.codebuddy/
+.claude/
+QWEN.md
