fix:修复播放页的bug

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,7 +23,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'SpellApp' do
+target 'Spell' do
   config = use_native_modules!
 
   use_react_native!(
