--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,9 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+# Signing config for release builds
+MYAPP_RELEASE_STORE_FILE=spellapp-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=spellapp-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=android
+MYAPP_RELEASE_KEY_PASSWORD=android
