--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.81.0",
     "react-native-audio-recorder-player": "^4.3.0",
     "react-native-device-info": "^14.0.4",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-nitro-modules": "^0.28.1",
