--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SpellApp",
+  "name": "Spell",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-nitro-modules": "^0.28.1",
     "react-native-performance": "^5.1.2",
     "react-native-reanimated": "^4.0.2",
