--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
+    "crypto-js": "^4.2.0",
     "openai": "^5.13.1",
     "react": "19.1.0",
     "react-native": "0.81.0",
@@ -58,6 +59,7 @@
     "@react-native/typescript-config": "0.81.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.1.0",
     "@types/react-native-vector-icons": "^6.4.18",
