--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
+    "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
+    "form-data": "^4.0.4",
+    "node-fetch": "^2.7.0",
     "openai": "^5.13.1",
     "react": "19.1.0",
     "react-native": "0.81.0",
